# langtutor2

./: ._GEMNI.md  ._Screens  .gitignore  CLAUDE.md  GEMNI.md  REQUIREMENTS.md  docker-compose.ai.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260501_persona_idle_video.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/ai/: agent_worker.py  cefr_assessor.py  coordinator_agent.py  gemini_plugin.py  prompt_templates.py  stt_plugin.py  tts_plugin.py  tutor_agent.py
backend/app/api/: auth.py  deps.py  internal.py
backend/app/api/admin/: admin_users.py  languages.py  logs.py  personas.py  plans.py  (+4 more)
backend/app/middleware/: audit.py
backend/app/models/: __init__.py  admin.py  audit.py  language.py  persona.py  plan.py  session.py  subscription.py  usage.py  user.py
backend/app/schemas/: admin.py  audit.py  auth.py  language.py  persona.py  plan.py  session.py  subscription.py  user.py
backend/app/services/: __init__.py  admin_role_service.py  admin_user_service.py  audit_service.py  auth_service.py  avatar_service.py  chat_service.py  geoip_service.py  language_service.py  livekit_service.py  liveportrait_service.py  onboarding_service.py  persona_service.py  plan_service.py  report_service.py  session_service.py  subscription_service.py  support_service.py  usage_service.py  user_service.py
backend/app/utils/: permissions.py  security.py
backend/scripts/: migrate_permissions_v2.py  seed.py  upgrade_admin_permissions.py  upgrade_plans_v3.py
(+123 files in other folders)
