[project]
name = "langtutor-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Pin bcrypt<4.1 — passlib's startup probe trips the 72-byte limit that
    # bcrypt 4.1+ enforces, breaking any code path that hashes a password.
    "bcrypt<4.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
    "aiofiles>=23.2.0",
    "livekit-agents>=0.11.0",
    "livekit-plugins-deepgram>=0.6.0",
    "livekit-plugins-silero>=0.7.0",
    "livekit>=0.13.0",
    "google-generativeai>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
